# fca-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  SETTINGS.md  codecov.yml  demo_mcp_full.py  docker-compose.yml  fastmcp.json  fca_mcp_server.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst
docs/sources/: api-reference.rst  contributing.rst  low-level-api.rst  usage.rst
docs/sources/fca_api/: async_api.rst  const.rst  exc.rst  raw_api.rst  raw_status_codes.rst
docs/sources/fca_api/types/: base.rst  field_parsers.rst  firm.rst  index.rst  individual.rst  markets.rst  pagination.rst  products.rst  search.rst  settings.rst
mcp_fca/: __init__.py
mcp_fca/adapters/: __init__.py  fca_async_adapter.py
mcp_fca/models/: __init__.py  toon.py
mcp_fca/server/: __init__.py  main.py
mcp_fca/server/cache/: memory.py
mcp_fca/server/guards/: limits.py
mcp_fca/server/oauth/: __init__.py  middleware.py
mcp_fca/server/pagination/: __init__.py  orchestrator.py
mcp_fca/tests/: conftest.py  test_tools_integration.py  test_tracking.py
src/fca_api/: __init__.py  async_api.py  const.py  exc.py  raw_api.py  raw_status_codes.py
src/fca_api/types/: __init__.py  base.py  field_parsers.py  firm.py  individual.py  markets.py  pagination.py  products.py  search.py  settings.py
src/fca_mcp/: __init__.py  __main__.py  __version__.py  app.py  cli.py  fca_ai_assistant.py  logging.py  nli.py  server_runner.py  settings.py  telemetry.py  types.py  uvcorn_app.py
src/fca_mcp/adapters/: __init__.py  fca_async_adapter.py
src/fca_mcp/azure/: __init__.py  api.py  blob_key_value.py  storage_container_names.py  table_key_value.py
src/fca_mcp/http/: __init__.py  interactive.py  landing.py
src/fca_mcp/http/resources/: interactive.html  landing.html
src/fca_mcp/models/: __init__.py  firm.py  meta.py  toon.py
src/fca_mcp/server/: __init__.py  api.py  app.py  auth.py  deps.py  firms.py  funds.py  individuals.py  interactive.py  main.py  markets.py  search.py  types.py
src/fca_mcp/server/auth/: __init__.py  provider.py  scopes.py  tags.py
src/fca_mcp/server/cache/: __init__.py  memory.py
src/fca_mcp/server/guards/: __init__.py  limits.py
src/fca_mcp/server/middleware/: cache.py
src/fca_mcp/server/oauth/: __init__.py  middleware.py
src/fca_mcp/server/pagination/: __init__.py  orchestrator.py
src/fca_mcp/server/tools/: __init__.py  handlers.py
src/fca_mcp/server/toon/: __init__.py  formatter.py
src/fca_mcp/server/tracking/: __init__.py  tracker.py
src/fca_mcp/server/types/: __init__.py  base.py  firm.py  individual.py  list_t.py  markets.py  pagination.py  products.py  search.py
src/mcp_fca/models/: firm.py
src/mcp_fca/server/cache/: __init__.py
src/mcp_fca/server/tools/: handlers.py
src/mcp_fca/server/toon/: formatter.py
tests/: __init__.py  conftest.py  test_auth_provider.py  test_azure_api.py  test_azure_stores.py  test_cache.py  test_cli.py  test_guards.py  test_logging.py  test_oauth.py  test_pagination.py  test_settings.py  test_table_key_value.py  test_telemetry.py  test_tools_integration.py  test_toon.py  test_tracking.py
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm/: get_firm_857937ed.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_addresses/: get_firm_addresses_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_appointed_representatives/: get_firm_appointed_representatives_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_disciplinary_history/: get_firm_disciplinary_history_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_individuals/: get_firm_individuals_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_names/: get_firm_names_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_passport_permissions/: get_firm_passport_permissions_baa5997a.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_passports/: get_firm_passports_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_permissions/: get_firm_permissions_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_regulators/: get_firm_regulators_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_requirement_investment_types/: get_firm_requirement_investment_types_73bb7171.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_requirements/: get_firm_requirements_ea40ab94.json
tests/mock_fca_api_cache/test_firm_simple.py/test_get_firm_waivers/: get_firm_waivers_ea40ab94.json
tests/mock_fca_api_cache/test_funds_simple.py/test_get_fund/: get_fund_827658f3.json
tests/mock_fca_api_cache/test_funds_simple.py/test_get_fund_names/: get_fund_names_827658f3.json
tests/mock_fca_api_cache/test_funds_simple.py/test_get_fund_subfunds/: get_fund_subfunds_827658f3.json
tests/server/: conftest.py  test_firm_simple.py  test_funds_simple.py  test_http_app.py  test_individuals_simple.py  test_regulated_markets_simple.py  test_search_simple.py  test_simple.py
tests/server/resources/: get_firm.json
tests/server/server_types/: test_server_type_base.py
tests/test_plugins/: __init__.py
tests/test_plugins/mock_client/: __init__.py  cache_filename.py  mock_data.py  mock_fca_api.py
tests/test_plugins/mock_session/: __init__.py  cache_filename.py  session.py
tests/units/: test_constants.py  test_raw_status_codes.py  test_types_field_parsers.py
tests/units/test_client/: conftest.py  test_edge_cases.py  test_field_parsers_coverage.py  test_get_firm_resource.py  test_get_individuals_resource.py  test_get_products_resource.py  test_get_regulated_markets.py  test_malformed_data_coverage.py  test_search.py  test_status_codes_coverage.py
tests/units/test_raw/: __init__.py  conftest.py  test_client_core.py  test_firm_methods.py  test_fund_methods.py  test_individual_methods.py  test_resource_info.py  test_search.py  test_validation_coverage.py
(+356 files in other folders)
